k8s/overlays/prod/patches/ingress-delete-patch.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
